--- a/bootstrap/stylesheets/bootstrap/_asia-colors.scss
+++ b/bootstrap/stylesheets/bootstrap/_asia-colors.scss
@@ -1,31 +1,37 @@
 /*******************************************
-    VARIABLES COLOR FOR PORTAL PAGE
+    VARIABLES COLOR FOR PORTAL ASIA PAGES
  *******************************************/
 
-$gold: #cfb067;
-$green: #18bc9c;
-$blue: #2c3e50;
-
-$gray: #2c3e50;
-
 $cornell-red: #b31b1b;
+
+$background-color: #cfb067;
+$corner-hero-home-color: #cfb067;
+$corner-hero-interior-color: #cfb067;
+
+//Button links
 $btn-link-background: #cfb067;
 $btn-link-text: #fff;
-$btn-link-hover: #717a41;
+$btn-link-hover: #6f9391;
+
+//Text Links
 $link-text: #cfb067;
-$link-text-hover: #717a41;
+$link-text-hover: #6f9391;
+
 $border-collections: #e7d8b4;
 $border-feature: #e5e5e6;
 $border-news: #e5e5e6;
 $border-news-image: #d1dcde;
 $border-feature-image: #d1dcde;
-$header-text: #cfb067;
+
+//Header and body text
+$header-text: #717a41;
 $body-text: #535562;
+
+//Footer
 $footer-shape: #f6f7f4;
 $footer-shape-btn: #535562;
 $footer-link: #535562;
 $footer-active: #999ea3;
 $footer-hover: #999ea3;
 
-$btn-link-text-interior: #cfb067;
-$btn-link-text-interior-hover: #cfb067;
+$gray: #2c3e50;
