--- a/bootstrap/stylesheets/bootstrap/_south-asia-collection-colors.scss
+++ b/bootstrap/stylesheets/bootstrap/_south-asia-collection-colors.scss
@@ -2,18 +2,20 @@
     VARIABLES COLOR FOR SOUTH ASIA PAGES
  *******************************************/
 
-$gold: #cfb067;
-$green: #18bc9c;
-$blue: #2c3e50;
-$gray: #2c3e50;
-
 $cornell-red: #b31b1b;
 
-$btn-link-background: #cfb067;
+$background-color: #326563;
+$corner-hero-home-color: #fff;
+$corner-hero-interior-color: #326563;
+
+//Button links
+$btn-link-background: #326563;
 $btn-link-text: #fff;
-$btn-link-hover: #717a41;
-$link-text: #cfb067;
-$link-text-hover: #717a41;
+$btn-link-hover: #6f9391;
+
+//Text Links
+$link-text: #326563;
+$link-text-hover: #6f9391;
 
 $border-collections: #e7d8b4;
 $border-feature: #e5e5e6;
@@ -21,17 +23,15 @@ $border-news: #e5e5e6;
 $border-news-image: #d1dcde;
 $border-feature-image: #d1dcde;
 
-$header-text: #cfb067;
-
+//Header and body text
+$header-text: #717a41;
 $body-text: #535562;
 
+//Footer
 $footer-shape: #f6f7f4;
 $footer-shape-btn: #535562;
 $footer-link: #535562;
 $footer-active: #999ea3;
 $footer-hover: #999ea3;
 
-$btn-link-text-interior: #cfb067;
-$btn-link-text-interior-hover: #cfb067;
-
-
+$gray: #2c3e50;
