--- a/css/all-collections.css
+++ b/css/all-collections.css
@@ -1,5 +1,5 @@
 /*******************************************
-    VARIABLES COLOR FOR PORTAL PAGE
+    VARIABLES COLOR FOR PORTAL ASIA PAGES
  *******************************************/
 /*******************************************
     RESETS
@@ -9,15 +9,10 @@ body {
   color: #535562;
   overflow-x: hidden; }
 
-/*.show-grid {
-    div {
-        background-color: #e3e3e3;
-    }
-}*/
 a {
   color: #fff; }
   a:hover {
-    color: #717a41; }
+    color: #6f9391; }
 
 li {
   font-size: 20px; }
@@ -38,7 +33,7 @@ a:hover {
   font-size: 15px;
   color: #fff; }
   .btn-link:hover {
-    background-color: #717a41;
+    background-color: #6f9391;
     color: #fff;
     opacity: .8;
     text-decoration: none; }
@@ -209,7 +204,7 @@ a.show-hide-search {
       #nav ul.first-level li:first-child {
         margin-top: 0; }
       #nav ul.first-level li:hover a {
-        color: #cfb067;
+        color: #b5b9ba;
         text-decoration: none; }
       #nav ul.first-level li:hover .wrapper {
         display: block;
@@ -255,6 +250,7 @@ a.show-hide-search {
               display: block;
               float: left; }
             #nav ul.first-level li .wrapper .second-level a {
+              color: #cfb067;
               line-height: 24px; }
           #nav ul.first-level li .wrapper .third-level {
             color: #cfb067;
@@ -341,7 +337,7 @@ a.show-hide-search {
     line-height: 1.1em;
     padding-bottom: 5px; }
     .search-home label .search-filter-selected {
-      opacity: .5; }
+      opacity: .8; }
   .search-home .filtered-search {
     font-size: 16px;
     color: #535562;
@@ -376,7 +372,7 @@ a.show-hide-search {
         line-height: 51px;
         padding-left: 10px; }
       .search-home .filtered-search .filter-search .glyphicon-chevron-up {
-        color: #cfb067;
+        color: #6f9391;
         font-size: 25px;
         line-height: 51px;
         padding-left: 10px; }
@@ -451,7 +447,7 @@ a.show-hide-search {
     line-height: 1.1em;
     padding-bottom: 10px; }
     .search-interior label .search-filter-selected {
-      opacity: .5; }
+      opacity: .8; }
   .search-interior .filtered-search {
     font-size: 16px;
     color: #2c3235;
@@ -481,7 +477,12 @@ a.show-hide-search {
       .search-interior .filtered-search .filter-search .active {
         display: none; }
       .search-interior .filtered-search .filter-search .glyphicon-chevron-down {
-        color: #1ebae1;
+        color: #cfb067;
+        font-size: 25px;
+        line-height: 51px;
+        padding-left: 10px; }
+      .search-interior .filtered-search .filter-search .glyphicon-chevron-up {
+        color: #6f9391;
         font-size: 25px;
         line-height: 51px;
         padding-left: 10px; }
@@ -514,6 +515,10 @@ a.show-hide-search {
         line-height: 51px;
         border-bottom: 1px solid #d6d6d6;
         font-size: 16px; }
+        .search-interior .filtered-search #filter-search-nav li a {
+          color: #cfb067; }
+          .search-interior .filtered-search #filter-search-nav li a:hover {
+            color: #6f9391; }
     .search-interior .filtered-search .submit-search {
       float: left;
       vertical-align: text-top;
@@ -541,6 +546,12 @@ a.show-hide-search {
   text-align: center;
   padding-top: 5px;
   display: none; }
+  .help:hover {
+    opacity: .9; }
+  .help a {
+    color: #fff; }
+    .help a:hover {
+      opacity: .5; }
 
 .user-tools-header {
   position: absolute;
@@ -580,6 +591,8 @@ a.show-hide-search {
   width: auto;
   color: #fff;
   display: none; }
+  .corner-hero path {
+    fill: #cfb067; }
 
 .not-front .interior {
   background-position: left 0;
@@ -601,6 +614,11 @@ a.show-hide-search {
   width: auto;
   color: #fff;
   display: none; }
+  .corner-hero-interior path {
+    fill: #cfb067; }
+  .corner-hero-interior svg {
+    height: 94px;
+    width: auto; }
 
 .home h3 {
   position: absolute;
@@ -674,7 +692,7 @@ a.show-hide-search {
     .features .feature h5 {
       font-size: 26px;
       padding-bottom: 10px;
-      color: #cfb067; }
+      color: #717a41; }
     .features .feature img {
       border: 6px solid #d1dcde; }
     .features .feature p {
@@ -709,7 +727,7 @@ a.show-hide-search {
     .news .new h6 {
       font-size: 26px;
       padding-bottom: 0;
-      color: #cfb067; }
+      color: #717a41; }
     .news .new date {
       display: block; }
     .news .new p {
@@ -812,76 +830,79 @@ a.show-hide-search {
     margin-bottom: 0;
     font-size: 32px; }
 
-.page-content .content-item {
-  color: #535562;
-  padding-right: 50px;
-  padding-bottom: 40px;
-  padding-left: 30px;
-  background-position: 0 bottom;
-  background-repeat: no-repeat;
-  background-image: url("../images/motif-2.svg");
-  background-size: 60%;
-  /*.breadcrumbs {
-      font-size: 16px;
-      padding-top: 20px;
-      ul {
-          padding-left: 0;
-          li {
-              display: inline-block;
-              a {
-                  color: $btn-link-text-inteior
-              }
-              a:hover {
-                  color: $body-text;
-              }
-          }
-      }
-  }*/ }
-  .page-content .content-item h4 {
-    font-size: 28px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    color: #cfb067; }
-  .page-content .content-item h5 {
-    font-size: 26px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    color: #cfb067; }
-  .page-content .content-item h6 {
-    font-size: 20px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    color: #cfb067; }
-  .page-content .content-item p {
-    font-size: 1.2em; }
-  .page-content .content-item ul, .page-content .content-item ol {
-    margin-top: 0; }
-    .page-content .content-item ul li, .page-content .content-item ol li {
-      margin-bottom: 3px; }
-      .page-content .content-item ul li ul li:last-child, .page-content .content-item ol li ul li:last-child {
-        margin-bottom: 20px; }
-  .page-content .content-item dt {
-    font-size: 20px; }
-  .page-content .content-item dd {
-    font-size: 1em;
-    padding-left: 20px; }
-  .page-content .content-item a {
-    color: #cfb067; }
-    .page-content .content-item a:hover {
+.page-content {
+  margin-left: 0;
+  margin-right: 0; }
+  .page-content .content-item {
+    color: #535562;
+    padding-right: 50px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    background-position: 0 bottom;
+    background-repeat: no-repeat;
+    background-image: url("../images/motif-2.svg");
+    background-size: 60%;
+    /*.breadcrumbs {
+        font-size: 16px;
+        padding-top: 20px;
+        ul {
+            padding-left: 0;
+            li {
+                display: inline-block;
+                a {
+                    color: $btn-link-text-inteior
+                }
+                a:hover {
+                    color: $body-text;
+                }
+            }
+        }
+    }*/ }
+    .page-content .content-item h4 {
+      font-size: 28px;
+      margin-top: 24px;
+      margin-bottom: 25px;
+      color: #717a41; }
+    .page-content .content-item h5 {
+      font-size: 26px;
+      margin-top: 24px;
+      margin-bottom: 25px;
+      color: #717a41; }
+    .page-content .content-item h6 {
+      font-size: 20px;
+      margin-top: 24px;
+      margin-bottom: 25px;
+      color: #717a41; }
+    .page-content .content-item p {
+      font-size: 1.2em; }
+    .page-content .content-item ul, .page-content .content-item ol {
+      margin-top: 0; }
+      .page-content .content-item ul li, .page-content .content-item ol li {
+        margin-bottom: 3px; }
+        .page-content .content-item ul li ul li:last-child, .page-content .content-item ol li ul li:last-child {
+          margin-bottom: 20px; }
+    .page-content .content-item dt {
+      font-size: 20px; }
+    .page-content .content-item dd {
+      font-size: 1em;
+      padding-left: 20px; }
+    .page-content .content-item a {
       color: #cfb067; }
-.page-content .side-nav {
-  padding-top: 10px;
-  padding-left: 30px;
-  padding-bottom: 30px;
-  border-top: 1px solid #d2dcdd; }
-  .page-content .side-nav h3 {
-    font-size: 22px;
-    color: #cfb067; }
-  .page-content .side-nav a {
-    font-size: 18px;
-    color: #cfb067; }
-    .page-content .side-nav a:hover {
+      .page-content .content-item a:hover {
+        color: #6f9391; }
+  .page-content .side-nav {
+    padding-top: 10px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    border-top: 1px solid #d2dcdd; }
+    .page-content .side-nav h3 {
+      font-size: 22px;
+      color: #717a41; }
+    .page-content .side-nav a {
+      font-size: 18px;
       color: #cfb067; }
+      .page-content .side-nav a:hover {
+        color: #6f9391; }
 
 .asia-collection .ac {
   margin-top: 50px; }
@@ -1051,7 +1072,7 @@ _\ \ | | | | | (_| | | |  / / | (_| | |_) | |  __/ |_\__ \
     top: 200px; }
 
   .not-front .interior {
-    background-position: left -200px; } }
+    background-position: left 0; } }
 /*  
     ___          _    _              
    /   \___  ___| | _| |_ ___  _ __  
